[project]
name = "pandas-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=75.2.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["./pandas_tools"]  # list of folders that contain the packages (["."] by default)
include = ["*.py"]
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
